refactor(Autowired): refatorado inicialização de classes de Controladora e Serviço