@@ -7,16 +7,19 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SellerService {
 
+    private final SellerRepository sellerRepository;
+
     @Autowired
-    private SellerRepository sellerRepository;
+    public SellerService(SellerRepository sellerRepository) {
+        this.sellerRepository = sellerRepository;
+    }
 
     public List<SellerDTO> findAll() {
         List<Seller> result = sellerRepository.findAll();
-        return result.stream().map(SellerDTO::new).collect(Collectors.toList());
+        return result.stream().map(SellerDTO::new).toList();
     }
 }
